making plugins and themes more tree shakable, fixing wrap issue with icons

--- a/remyx-core/src/themes/variables.css
+++ b/remyx-core/src/themes/variables.css
@@ -322,7 +322,7 @@
 .rmx-toolbar-inner {
   display: flex;
   align-items: center;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   gap: 1px;
   flex: 1;
   min-width: 0;
